# plaintext_playlist_py

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  run-tests.yaml
plaintext_playlist_py/: __init__.py  __main__.py  funcs.py  id3.py  ui.py
